changing to rems

--- a/sass/theme.scss
+++ b/sass/theme.scss
@@ -59,7 +59,7 @@ $info-color: #a0d3e8;
 
 // Other Arbitrary Values
 
-$spacing: 15px;
+$spacing: 1.5rem;
 $radius: 5px;
 $footer-height:225px;
 $header-height:110px;
